2008-05-12  Rob Taylor  <rob.taylor@codethink.co.uk>

	* libtinymail/tny-error.c: Fix documentation

2008-05-12  Rob Taylor  <rob.taylor@codethink.co.uk>

	* m4/ticonv.m4: Add --with-iconv-detect-h option to allow the passing
	of a pre-generated iconv-detect.h rather than generating it at
	configure time.

2008-05-12  Rob Taylor  <rob.taylor@codethink.co.uk>

	* libtinymail-camel/tny-camel-bs-msg-receive-strategy.c:
	* libtinymail-camel/tny-camel-folder.c:
	* libtinymail-camel/tny-camel-nntp-folder.c:
	* libtinymail-camel/tny-camel-mime-part.c:
	* libtinymail-camel/tny-camel-send-queue.c:
	* libtinymail-camel/tny-camel-pop-store-account.c:
	* libtinymail-camel/tny-camel-pop-folder.c:
	* libtinymail-camel/tny-camel-common.c:
	* libtinymail-camel/tny-camel-nntp-store-account.c:
	* libtinymail-camel/tny-camel-store-account.c:
	* libtinymail-camel/tny-camel-transport-account.c:
	* libtinymail-camel/tny-camel-account.c:
	* libtinymail/tny-error.c:
	* libtinymail/tny-error.h:
	* libtinymail/tny-merge-folder.c: Fix tinymail's GError usage. Use an
	actual GQuark for the domain, have one domain for tinymail as a whole.
	Removes the pointless GType for the error.

2008-05-12  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-send-queue.c: Add camel folder reason to
	sentbox and outbox while sending, as we can get unreasons and have
	then crash because the message cache is freed. (Based on a previous
	patch by Dape)

2008-05-09  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-folder.c:
          Add some reasons/unreasons in get_headers_operation, to avoid
          getting a 0 account when we are replacing the headers in the
          gtk list store model. This should avoid some very hidden
          crashes.

2008-05-06  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/camel-certdb-cst.c
        Fix some leaks in CST certificate manager support.

	* libtinymail-camel/tny-camel-folder.c: