@@ -1,2 +1,5 @@
 EXTRA_DIST = tny-sharp.snk
-SUBDIRS = . tny ui ui-gtk camel platform
+SUBDIRS = . tny ui ui-gtk camel
+ifdef HAVE_PLATFORM
+SUBDIRS += platform
+endif
